--- a/flink-ml-uber/pom.xml
+++ b/flink-ml-uber/pom.xml
@@ -61,6 +61,12 @@ under the License.
 
     <dependency>
       <groupId>org.apache.flink</groupId>
+      <artifactId>flink-ml-servable-lib</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.flink</groupId>
       <artifactId>flink-ml-benchmark</artifactId>
       <version>${project.version}</version>
     </dependency>
