--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -22,10 +22,17 @@ on:
     branches: [ '**' ]
   pull_request:
     branches: [ '**' ]
+  workflow_dispatch:
+    inputs:
+      manully_trigger:
+        type: boolean
+        description: 'Manually trigger the build and tests'
+        required: false
+        default: false
 
 jobs:
   python-tests:
-    if: (github.repository == 'apache/flink-ml')
+    if: github.repository == 'apache/flink-ml' || github.event_name == 'workflow_dispatch'
     name: Python ${{ matrix.python-version }} tests on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
