--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       matrix:
         os: ['macOS-latest', 'ubuntu-20.04']
-        python-version: ['3.7']
+        python-version: ['3.7', '3.8']
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -52,7 +52,7 @@ jobs:
       - name: Install python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.7.17
       - name: Install dependencies
         working-directory: flink-ml-python/dev
         run: python -m pip install -r dev-requirements.txt
