--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,9 @@ under the License.
     <junit.version>4.13.2</junit.version>
     <flink.forkCount>1C</flink.forkCount>
     <flink.reuseForks>true</flink.reuseForks>
-    <flink.main.version>1.17</flink.main.version>
-    <flink.version>1.17.1</flink.version>
-    <flink.python.artifact>flink-python</flink.python.artifact>
+    <flink.main.version>1.15</flink.main.version>
+    <flink.version>1.15.3</flink.version>
+    <flink.python.artifact>flink-python_2.12</flink.python.artifact>
     <zookeeper.version>3.6.3</zookeeper.version>
     <hadoop.version>2.10.2</hadoop.version>
 
